--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   },
   "lint-staged": {
     "*.js": [
-      "npx eslint . --fix",
-      "git add"
+      "npx eslint . --fix"
     ],
     "*.{css,scss}": [
-      "npx stylelint --fix",
-      "git add"
+      "npx stylelint --fix"
     ]
   },
   "dependencies": {
@@ -28,9 +26,10 @@
     "sass": "^1.35.2"
   },
   "devDependencies": {
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
