--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-scss": "^3.20.1"
   }
 }
