--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,9 @@
   ],
   "rules": {
     "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true
+    "scss/at-rule-no-unknown": true,
+    "declaration-property-value-allowed-list": {
+      "transition": ["/.+/"]
+    }
   }
 }
